--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "tailwind-portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "http://bilal1602.github.io/react-tailwind-portfolio",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
@@ -20,7 +21,8 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"build:css": "postcss src/styles/tailwind.css -o src/styles/main.css",
-		"build:watch": "postcss src/styles/tailwind.css -o src/styles/main.css --watch"
+		"build:watch": "postcss src/styles/tailwind.css -o src/styles/main.css --watch",
+		"deploy": "npm run build && gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -42,6 +44,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^9.8.6",
+		"gh-pages": "^3.2.3",
 		"postcss": "^8.3.6",
 		"postcss-cli": "^8.3.1",
 		"tailwindcss": "^2.2.7"
