--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-lazy-load-image-component": "^1.5.1",
+		"react-particles-js": "^3.5.3",
 		"react-scripts": "4.0.3",
 		"react-scroll": "^1.8.3",
+		"react-tsparticles": "^1.34.0",
 		"react-typical": "^0.1.3",
 		"web-vitals": "^1.1.2"
 	},
