--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-scroll": "^1.8.3",
 		"react-tsparticles": "^1.34.0",
 		"react-typical": "^0.1.3",
+		"styled-components": "^5.3.1",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
