--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,8 +2,7 @@ name: CI and CD
 on:
     push:
         branches:
-            # - main
-            - feature/ci-cd
+            - main
 
 jobs:
     Explore-GitHub-Actions:
@@ -20,3 +19,6 @@ jobs:
               run: |
                   ls ${{ github.workspace }}
             - run: echo "🍏 This job's status is ${{ job.status }}."
+            - name: Deploy to GH Pages.
+            - run: npm run build
+            - run: gh-pages -d build
