--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -8,17 +8,15 @@ jobs:
     Explore-GitHub-Actions:
         runs-on: ubuntu-latest
         steps:
-            - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-            - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-            - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
             - name: Check out repository code
               uses: actions/checkout@v2
-            - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-            - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-            - name: List files in the repository
-              run: |
-                  ls ${{ github.workspace }}
-            - run: echo "🍏 This job's status is ${{ job.status }}."
-            - name: Deploy to GH Pages.
-            - run: npm run build
-            - run: gh-pages -d build
+            - name: Install and build
+            - run: |
+                  npm install 
+                  npm run build
+
+            - name: Deploy
+              uses: JamesIves/github-pages-deploy-action@4.2.3
+              with:
+                  branch: main # The branch the action should deploy to.
+                  folder: build # The folder the action should deploy.
