--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v2
             - name: Install and build
             - run: |
-                  npm install 
+                  npm ci 
                   npm run build:css 
                   react-scripts build
 
