--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -9,12 +9,15 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Check out repository code
-              uses: actions/checkout@main
+              uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+                with:
+                node-version: '14.7.0'
             - name: Install and build
-            - run: |
-                  npm ci 
-                  npm run build:css 
-                  react-scripts build
+            - run: npm install
+            - run: npm install -D
+            - run: npm run build:css
+            - run: react-scripts build
             - name: Deploy
               uses: JamesIves/github-pages-deploy-action@4.2.3
               with:
