--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -11,8 +11,8 @@ jobs:
             - name: Check out repository code
               uses: actions/checkout@v2
             - uses: actions/setup-node@v2
-                with:
-                node-version: '14.7.0'
+              with:
+                  node-version: "14.7.0"
             - name: Install and build
             - run: npm install
             - run: npm install -D
