--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -8,8 +8,7 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Check out repository code
-              uses: actions/checkout@v2
+            - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
               with:
                   node-version: "14.7.0"
@@ -18,8 +17,7 @@ jobs:
             - run: npm install -D
             - run: npm run build:css
             - run: react-scripts build
-            - name: Deploy
-              uses: JamesIves/github-pages-deploy-action@4.2.3
+            - uses: JamesIves/github-pages-deploy-action@4.2.3
               with:
                   branch: main # The branch the action should deploy to.
                   folder: build # The folder the action should deploy.
