--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -12,3 +12,11 @@ jobs:
             - uses: actions/setup-node@v2
               with:
                   node-version: "14.7.0"
+            - run: npm install
+            - run: npm install -D
+            - run: npm run build:css
+            - run: react-scripts build
+            - uses: JamesIves/github-pages-deploy-action@4.2.3
+              with:
+                  branch: main # The branch the action should deploy to.
+                  folder: build # The folder the action should deploy.
