--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -14,8 +14,7 @@ jobs:
                   node-version: "14.7.0"
             - run: npm ci
             - run: npm ci -D
-            - run: npm run build:css
-            - run: react-scripts build
+            - run: npm run build --if-present
             - uses: JamesIves/github-pages-deploy-action@4.1.1
               with:
                   branch: main # The branch the action should deploy to.
