--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,21 +1,24 @@
 name: CI and CD
 on:
     push:
-        branches:
-            - main
+        branches: [ main ]
 
 jobs:
-    build-and-deploy:
+    build:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [10.x, 12.x, 14.x, 15.x]
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
               with:
-                  node-version: "14.7.0"
+                node-version: ${{ matrix.node-version }}
             - run: npm ci
             - run: npm ci -D
             - run: npm run build --if-present
-            - uses: JamesIves/github-pages-deploy-action@4.1.1
-              with:
-                  branch: main # The branch the action should deploy to.
-                  folder: build # The folder the action should deploy.
+          
+    deploy: 
+        steps:
+            needs: [build]
+            - run: gh-pages -d build
