--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -20,5 +20,5 @@ jobs:
           
     deploy: 
         steps:
-            needs: [build]
+            needs: build
             - run: gh-pages -d build
