--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: "14.7.0"
+                node-version: [14.7.0]
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
