--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,8 +4,10 @@ on:
         branches: [main]
 
 jobs:
-    build:
+    build-and-deploy:
         runs-on: ubuntu-latest
+        env:
+            REACT_APP_ENV: production
         strategy:
             matrix:
                 node-version: [14.7.0]
@@ -17,4 +19,7 @@ jobs:
             - run: npm ci
             - run: npm ci -D
             - run: npm run build --if-present
-            - run: gh-pages -d build
+            - uses: JamesIves/github-pages-deploy-action@v4.2.5
+              with:
+                branch: gh-pages # The branch the action should deploy to.
+                folder: build # The folder the action should deploy.
