--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
+		"@types/jest": "^27.4.1",
+		"@types/node": "^17.0.21",
+		"@types/react": "^17.0.39",
+		"@types/react-dom": "^17.0.11",
 		"antd": "^4.16.13",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -17,6 +21,7 @@
 		"react-tsparticles": "^1.34.0",
 		"react-typical": "^0.1.3",
 		"styled-components": "^5.3.1",
+		"typescript": "^4.5.5",
 		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
@@ -47,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-scroll": "^1.8.3",
 		"autoprefixer": "^9.8.6",
 		"gh-pages": "^3.2.3",
 		"postcss": "^8.3.6",
